# Parapegma

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  COMPONENT_AUDIT.md  COMPONENT_MAP.md  DESIGN_SYSTEM.md  LICENSE  README.md  docker-compose.yml  renovate.json
api/: .dockerignore  Dockerfile  openapi.json  pyproject.toml
api/app/: cli.py  config.py  config_loader.py  db.py  diagnostics.py  healthcheck.py  id_utils.py  llm.py  logging_conf.py  main.py  middleware.py  middleware_logging.py  models.py  prompt_loader.py  routes.py  serve.py
api/app/agents/: __init__.py  coach.py  engine.py  feedback.py  intake.py  proposals.py  routing.py  runner.py  specialists.py  tool_trace.py
api/app/db_migrations/: __init__.py  alembic.ini  env.py  migrate.py  script.py.mako
api/app/db_migrations/versions/: 0001_initial_flow_schema.py  0002_add_conversation_events_and_turns.py  0003_turn_gating_columns.py  0004_notifications_schema.py  0005_remove_scheduled_prompt_events.py  0006_unified_notification_engine.py  0007_drop_legacy_tables.py  0008_push_410_threshold_and_schema_fixes.py  0009_add_scheduled_tasks_feedback_loop.py  0010_add_message_metadata_json.py  0011_add_experimental_condition_tables.py  0012_add_daily_summaries_table.py  0013_add_spark_research_telemetry.py
api/app/models/: __init__.py  base.py  core.py  experiment.py  messaging.py  notifications.py  profile.py  spark_research.py
api/app/routes/: __init__.py  _shared.py  activation.py  admin_debug.py  admin_projects.py  admin_push.py  dashboard.py  feedback.py  messaging.py  notifications.py  schemas.py  spark.py  streaming.py
api/app/schemas/: __init__.py  bandit.py  messaging.py  patches.py  router.py  spark_research.py  tool_schemas.py
api/app/services/: condition_filters.py  crypto.py  eod_summarizer.py  event_service.py  feedback_script.py  intervention_config.py  llm_time_context.py  notification_engine.py  outbox_service.py  prefetch.py  profile_service.py  prompt_context.py  push_service.py  randomization.py  scheduler_service.py  spark_library.py  spark_research.py  spark_sheets_credentials.py  spark_sheets_source.py
api/app/tools/: __init__.py  proposal_tools.py  scheduler_tools.py
api/app/worker/: __init__.py  delivery.py  notification_worker.py  nudge.py  outbox_worker.py  tasks.py
api/config/: interventions.json  spark_library.json  spark_library_sheets.csv
api/prompts/: coach_system.txt  eod_summarizer_system.txt  feedback_system.txt  intake_system.txt  prompt_generator_condition_c.txt  prompt_generator_condition_d.txt  prompt_generator_system.txt  router_system.txt  spark_proxy_system.txt
api/scripts/: dump_openapi.py  format_spark_sheets_credentials.py  seed_e2e.py  verify_db.py
api/tests/: test_admin_push_perf.py  test_api.py  test_api_schema_contracts.py  test_config.py  test_config_loader.py  test_crypto.py  test_diagnostics.py  test_engine_integration.py  test_eod_summarizer.py  test_format_spark_sheets_credentials.py  test_four_condition_experiment.py  test_healthcheck.py  test_id_utils.py  test_langchain_agents.py  test_langchain_tools.py  test_llm_time_context.py  test_logging_conf.py  test_logging_middleware.py  test_migrations.py  test_milestone2.py  test_new_architecture.py  test_notification_engine.py  test_notification_worker.py  test_notifications_routes.py  test_nudge_integration.py  test_outbox_worker.py  test_prefetch.py  test_prompt_context.py  test_prompts.py  test_push_service.py  test_read_receipt_logic.py  test_spark_library.py  test_spark_sheets_credentials.py  test_timezone_endpoint.py  test_tool_trace.py  test_worker_logic.py
docs/: README.md  code-quality.md  (+8 more)
(+150 files in other folders)
