[project]
name = "flow-app-api"
version = "0.1.0"
description = "API for flow-app"
requires-python = ">=3.11"
dependencies = [
    "h4ckath0n>=0.1.9",
    "cryptography>=44.0",
    "langgraph>=1.0.8",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.22.1",
    "pywebpush>=2.3.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.9",
    "langchain-groq>=0.3.8",
    "langchain-pinecone>=0.2.13",
    "langchain>=1.2.10",
    "langchain-core>=1.2.12",
    "groq>=0.31.0",
    "pinecone-client>=5.0.1",
    "openai>=2.6.1",
    "asyncpg>=0.31.0",
    "alembic>=1.16.1",
]

[project.scripts]
h4ckath0n = "h4ckath0n.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
